// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typography snapshots Typography: 0 1`] = `
<p
  className="typography-0-1-1 typography__1-0-1-2"
>
  Typography example string
</p>
`;

exports[`typography snapshots Typography: 1 1`] = `
<h1
  className="typography-0-1-1 typography__1-0-1-2"
  data-sketch-symbol="Typographic size 1"
>
  Typography example string
</h1>
`;

exports[`typography snapshots Typography: 2 1`] = `
<h2
  className="typography-0-1-1 typography__2-0-1-3"
  data-sketch-symbol="Typographic size 2"
>
  Typography example string
</h2>
`;

exports[`typography snapshots Typography: 3 1`] = `
<h3
  className="typography-0-1-1 typography__3-0-1-4"
  data-sketch-symbol="Typographic size 3"
>
  Typography example string
</h3>
`;

exports[`typography snapshots Typography: 4 1`] = `
<h4
  className="typography-0-1-1 typography__4-0-1-5"
  data-sketch-symbol="Typographic size 4"
>
  Typography example string
</h4>
`;

exports[`typography snapshots Typography: 5 1`] = `
<h5
  className="typography-0-1-1 typography__5-0-1-6"
  data-sketch-symbol="Typographic size 5"
>
  Typography example string
</h5>
`;

exports[`typography snapshots Typography: 6 1`] = `
<h6
  className="typography-0-1-1 typography__6-0-1-7"
  data-sketch-symbol="Typographic size 6"
>
  Typography example string
</h6>
`;

exports[`typography snapshots Typography: 7 1`] = `
<span
  className="typography-0-1-1 typography__7-0-1-8"
  data-sketch-symbol="Typographic size 7"
>
  Typography example string
</span>
`;

exports[`typography snapshots Typography: 8 1`] = `
<caption
  className="typography-0-1-1 typography__8-0-1-9"
  data-sketch-symbol="Typographic size 8"
>
  Typography example string
</caption>
`;

exports[`typography snapshots Typography: 9 1`] = `
<p
  className="typography-0-1-1 typography__9-0-1-10"
  data-sketch-symbol="Typographic size 9"
>
  Typography example string
</p>
`;
